# trust-dns

./: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/src/client/: client_future.rs  memoize_client_handle.rs
crates/client/src/rr/dnssec/: key_format.rs
crates/client/src/serialize/txt/: master_lex.rs
crates/client/src/serialize/txt/rdata_parsers/: sshfp.rs  tlsa.rs
crates/client/src/tcp/: tcp_client_connection.rs
crates/client/src/udp/: udp_client_connection.rs
crates/https/src/: https_client_stream.rs  https_server.rs  lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: bind_if.rs  error.rs  lib.rs
crates/proto/src/bind_if/: macos.rs  mod.rs  windows.rs
crates/proto/src/multicast/: mdns_client_stream.rs  mdns_stream.rs
crates/proto/src/rr/rdata/: caa.rs  naptr.rs  tlsa.rs
crates/proto/src/serialize/binary/: encoder.rs
crates/proto/src/tcp/: tcp_client_stream.rs  tcp_stream.rs
crates/proto/src/udp/: udp_client_stream.rs  udp_stream.rs
crates/proto/src/xfer/: dns_exchange.rs  dns_handle.rs  dns_multiplexer.rs  mod.rs  retry_dns_handle.rs  secure_dns_handle.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: config.rs  error.rs  hosts.rs  lib.rs  lookup.rs  lookup_ip.rs  lookup_state.rs  resolver.rs
crates/resolver/src/async_resolver/: background.rs  mod.rs
crates/resolver/src/name_server/: connection_provider.rs  name_server.rs  name_server_pool.rs
crates/server/: Cargo.toml
crates/server/benches/: comparison_benches.rs
crates/server/src/: lib.rs  named.rs
crates/server/src/authority/: authority.rs  catalog.rs
crates/server/src/config/: mod.rs
crates/server/src/server/: https_handler.rs  server_future.rs  timeout_stream.rs
crates/server/src/store/: config.rs
crates/server/src/store/file/: authority.rs
crates/server/src/store/in_memory/: authority.rs
crates/server/src/store/sqlite/: authority.rs  persistence.rs
crates/server/tests/: store_sqlite_tests.rs  timeout_stream_tests.rs  z_named_test_rsa_dnssec.rs
crates/server/tests/authority_battery/: basic.rs  dynamic_update.rs
crates/server/tests/server_harness/: mod.rs
tests/integration-tests/: Cargo.toml
tests/integration-tests/src/: lib.rs
tests/integration-tests/tests/: catalog_tests.rs  client_future_tests.rs  client_tests.rs  lookup_tests.rs  server_future_tests.rs
