[workspace]
members = ["crates/client",
           "crates/native-tls",
           "crates/openssl",
           "crates/proto",
           "crates/resolver",
           "crates/rustls",
           "crates/https",
           "crates/server",
           "tests/compatibility-tests",
           "tests/integration-tests",
           "util"]

[patch.crates-io]
mio = { git = "https://github.com/hankbao/mio.git", branch = "v0.6.x-windows" }
tokio = { git = "https://github.com/hankbao/tokio.git", branch = "v0.1.x-windows" }
