[package]
name = "trust-dns-proto"
version = "0.7.4"
edition = "2018"
authors = ["Benjamin Fry <benjaminfry@me.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
Trust-DNS is a safe and secure DNS library. This is the foundational DNS protocol library for all Trust-DNS projects.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/trust-dns"
homepage = "http://www.trust-dns.org/index.html"
repository = "https://github.com/bluejekyll/trust-dns"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["DNS", "BIND", "dig", "named", "dnssec"]
categories = ["network-programming"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "bluejekyll/trust-dns" }
appveyor = { repository = "bluejekyll/trust-dns", branch = "master", service = "github" }
codecov = { repository = "bluejekyll/trust-dns", branch = "master", service = "github" }

[features]
dnssec-openssl = ["dnssec", "openssl"]
dnssec-ring = ["dnssec", "ring", "untrusted"]
dnssec = ["data-encoding"]

serde-config = ["serde"]

# enables experimental the mDNS (multicast) feature
mdns = ["socket2/reuseport"]

# WARNING: there is a bug in the mutual tls auth code at the moment see issue #100
# mtls = ["tls"]

bindif = ["winapi"]

[lib]
name = "trust_dns_proto"
path = "src/lib.rs"

[dependencies]
byteorder = "^1.2"
data-encoding = { version = "2.1.0", optional = true }
enum-as-inner = "0.2"
failure = "0.1"
futures = "^0.1.27"
idna = "^0.1.4"
lazy_static = "^1.0"
log = "^0.4.1"
openssl = { version = "^0.10", features = ["v102", "v110"], optional = true }
rand = "0.6"
ring = { version = "0.14", optional = true }
serde = { version = "1.0", optional = true }
smallvec = "^0.6"
socket2 = { version = "^0.3.9" }
tokio = { git = "https://github.com/hankbao/tokio.git", branch = "v0.1.x-windows" }
untrusted = { version = "^0.6", optional = true }
url = "1.6.0"

[target.'cfg(windows)'.dependencies.winapi]
git = "https://github.com/hankbao/winapi-rs.git"
branch = "iphlpapi-support"
optional = true
features = [
    "winsock2",
    "ws2ipdef",
]

[dev-dependencies]
env_logger = "^0.6"
